# drone3d

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml  run_image.bash
include/: drone3d.h  drone_object.h  grid.h  route_planner.h
launch/: drone3d.launch
src/: drone_object.cpp  grid.cpp  route_planner.cpp  simulate.cpp  survivors_plugin.cpp
urdf/: sjtu_drone.urdf
worlds/: city1.world  city2.world  survivors.world
